--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -371,6 +371,7 @@ body {
   flex: 1;
   padding: 12px 20px;
   border-radius: 25px;
+  resize: none;
   border: none;
   font-size: 16px;
   outline: none;
@@ -478,4 +479,23 @@ body {
   font-size: 12px;
   color: #666;
   margin-left: 8px;
+
+}
+/* Botão do emoji */
+#emoji-btn {
+  background: transparent;        
+  border: none;                  
+  font-size: 30px;                
+  cursor: pointer;                
+  margin-right: 8px;              
+  padding: 4px;                   
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#emoji-btn:hover {
+  background-color: rgba(0, 0, 0, 0.05); 
+  border-radius: 6px;
 }
